<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1a6fa"
    tools:context="com.example.nachu.dicegame2.MainActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#4971f5"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="40sp"/>
    <RadioGroup
        android:gravity="center"
        android:id="@+id/rg"
        android:layout_below="@id/tv1"
        android:layout_margin="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/rb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sp"
        android:textSize="20sp"
        android:checked="true"/>
        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tp"
            android:textSize="20sp"/>
    </RadioGroup>
    <ImageButton
        android:id="@+id/ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pic"
        android:background="#e1a6fa"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/rg"
        android:onClick="startGame"/>
    <ImageButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/share"
        android:layout_below="@+id/ib"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="#e1a6fa"/>
</RelativeLayout>
